force-app/main/default/objects/FEC_MRC__c/FEC_MRC__c.object-meta.xml
<CustomObject>
    <label>MRC</label>
    <nameField>
        <displayFormat>MRCN - {0}</displayFormat>
        <label>MRC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>