force-app/main/default/objects/FEC_MRC__c/fields/FEC_Area__c.field-meta.xml
<CustomField>
    <fullName>FEC_Area__c</fullName>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>