force-app/main/default/objects/FEC_MRC__c/fields/FEC_Notarized_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notarized_Postal_Code__c</fullName>
    <label>Notarized Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>