force-app/main/default/objects/FEC_MRC__c/fields/FEC_Notarized_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notarized_Posted_Date__c</fullName>
    <label>Notarized Posted Date</label>
    <type>Date</type>
</CustomField>