force-app/main/default/objects/FEC_MRC__c/fields/FEC_Notarized_Provided_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notarized_Provided_Number__c</fullName>
    <label>Notarized Provided Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>