force-app/main/default/objects/FEC_MRC__c/fields/FEC_Notarized_Receiver__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notarized_Receiver__c</fullName>
    <label>Notarized Receiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>