force-app/main/default/objects/FEC_MRC__c/fields/FEC_Notarized_Remark__c.field-meta.xml
<CustomField>
    <fullName>FEC_Notarized_Remark__c</fullName>
    <label>Notarized Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>