force-app/main/default/objects/FEC_MRC__c/fields/FEC_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Posted_Date__c</fullName>
    <description>Ngày cập nhật</description>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>