force-app/main/default/objects/FEC_MRC__c/fields/FEC_Provided_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Provided_Number__c</fullName>
    <description>Số lần cấp MRC công chứng/ BNTC</description>
    <label>Provided Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>