force-app/main/default/objects/FEC_MRC__c/fields/FEC_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status_ID__c</fullName>
    <label>Status ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>